--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 0;   
+  padding: 0; 
+ font-family: 'Roboto', sans-serif;
+  min-height: 100vh; 
+  display: flex;  
+  justify-content: center; 
+  align-items: center; 
+  background-image: url(./images/bgc.jpg);
+   background: linear-gradient(135deg, #87CEEB 0%, #F0F8FF 100%) ;
+   color: #2C3E50;
+   box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.forecast-item{
+   background-color: #87CEEB;
+   font-size: 18px;
+   padding: 17px;
+   margin: 0 18px;
+   transition: 2s;
+}
+.forecast-item:hover{
+   transform: scale(1.1);
 }
